# mcp-fastapi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  release.yml
.sonarlint/: connectedMode.json
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: padroes_de_stack.md
docs/references/: 01 FastAPI class.md  02 Request Parameters.md  03 Status Codes.md  04 UploadFile class.md  05 Exceptions - HTTPException and WebSocketException.md  06 Dependencies - Depends() and Security().md  07 APIRouter class.md  08 Background Tasks - BackgroundTasks.md  09 Request class.md  10 WebSockets.md  11 HTTPConnection class.md  12 Response class.md  13 Custom Response Classes - File, HTML, Redirect, Streaming, etc.md  14 Middleware.md  15 Advanced Middleware.md  16 Sub Applications - Mounts.md  17 Behind a Proxy.md  18 Templates.md  19 OpenAPI docs.md  20 OpenAPI models.md  21 WebSockets.md  22 Lifespan Events.md  23 Testing WebSockets.md  24 Testing Events lifespan and startup - shutdown.md  25 Testing Events lifespan and startup - shutdown.md  26 Async Tests.md  27 Settings and Environment Variables.md  28 OpenAPI Callbacks.md  29 OpenAPI Webhooks.md  30 Including WSGI - Flask, Django, others.md  31 Generating SDKs.md  32 Advanced Python Types.md  33 JSON with Bytes as Base64.md  35 Security Tools.md  (+5 more)
scripts/: run-sonar-local.sh
(+16 files in other folders)
